--- a/qt files/sign_in.ui
+++ b/qt files/sign_in.ui
@@ -99,17 +99,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QTextEdit" name="password_input">
-    <property name="geometry">
-     <rect>
-      <x>280</x>
-      <y>260</y>
-      <width>221</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="password_input_label">
+   <widget class="QLabel" name="password_label">
     <property name="geometry">
      <rect>
       <x>280</x>
@@ -127,7 +117,7 @@
      <string>Пароль:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="email_input_label">
+   <widget class="QLabel" name="email_label">
     <property name="geometry">
      <rect>
       <x>280</x>
@@ -145,31 +135,35 @@
      <string>Электронная почта:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="error_sign_label">
+   <widget class="QLabel" name="error_label">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>570</y>
-      <width>321</width>
-      <height>41</height>
+      <x>0</x>
+      <y>580</y>
+      <width>771</width>
+      <height>61</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>282</x>
+      <y>274</y>
+      <width>221</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>776</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
