--- a/qt files/sign_in.ui
+++ b/qt files/sign_in.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>sign_in_window</class>
- <widget class="QMainWindow" name="sign_in_window">
+ <widget class="QWidget" name="sign_in_window">
   <property name="enabled">
    <bool>true</bool>
   </property>
@@ -26,7 +26,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Заметки</string>
+   <string>Вход в Заметки</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="sign_in_btn">
@@ -153,7 +153,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="password_input">
     <property name="geometry">
      <rect>
       <x>282</x>
