--- a/qt files/add_note_window.ui
+++ b/qt files/add_note_window.ui
@@ -156,7 +156,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Дата</string>
+    <string>Дата(UTC)</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
