опять ничего не работает

--- a/qt files/main_window.ui
+++ b/qt files/main_window.ui
@@ -356,6 +356,24 @@ p, li { white-space: pre-wrap; }
      <string/>
     </property>
    </widget>
+   <widget class="QPushButton" name="update_btn">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>211</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string> Обновить</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
